Feature: Added savings calculator
